[package]
name = "aletheia"
version = "0.1.0"
authors = ["Nicholas Yang <ny585@nyu.edu>"]
edition = "2018"

[dependencies]
argonautica = "0.1.5"
base64 = "0.10.1"
blake2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.1", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
dotenv = "0.9.0"
failure = "0.1.5"
failure_derive = "0.1.5"
heck = "0.3.1"
image = "0.21.1"
itertools = "0.8"
jsonwebtoken = "5"
juniper = "0.11.1"
juniper_rocket = "0.2.0"
multipart = "0.16.1"
r2d2 = "0.8.3"
rand = "0.6.5"
rocket = "0.4.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
rusoto_core = "0.37.0"
rusoto_s3 = "0.37.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
slug = "0.1.4"
toml = "0.4.10"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["json", "diesel_postgres_pool"]
